syntax = "proto3";

package io.vg.srv.productImage;

import 'common.proto';
import 'google/protobuf/any.proto';
import "google/protobuf/timestamp.proto";
import 'google/protobuf/wrappers.proto';
import 'google/protobuf/struct.proto';

message ProductImage {
  // normal field
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp deletedAt = 4;
  google.protobuf.StringValue createdBy = 5;
  google.protobuf.StringValue updatedBy = 6;
  google.protobuf.StringValue deletedBy = 7;
  // reserved field
  string productId = 8;
  string imageUrl = 9;
  int32 sortOrder = 10;
}

message ProductImages {
  repeated ProductImage productImages = 1;
}

message ProductImageEdge {
  ProductImages node = 1;
  string cursor = 2;
}

message ProductImageConnection {
  common.PageInfo pageInfo = 1;
  int32 totalCount = 2;
  repeated ProductImageEdge edges = 3;
}

message ProductImageInput {
  string productId = 1;
  string imageUrl = 2;
  int32 sortOrder = 3;
}

message CreateProductImageInput {
  ProductImageInput data = 1;
}

message CreateManyProductImagesInput {
  repeated ProductImageInput ProductImages = 1;
}

message UpdateProductImageInput {
  string id = 1;
  ProductImageInput data = 2;
}

message UpdateManyProductImagesInput {
  google.protobuf.Any filter = 1;
  ProductImageInput update = 2;
}

message DeleteManyProductImagesInput {
  google.protobuf.Any filter = 1;
}

message NullableProductImage {
  oneof kind {
    google.protobuf.NullValue null = 1;
    ProductImage data = 2;
  }
}